fix:함수명 수정